2004-10-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellview.c (gtk_cell_view_cell_layout_clear_attributes): 
	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_cell_layout_clear_attributes): 
	Silently ignore info being NULL. This is unavoidable with the 
	current design where we have every implementation of layout_clear
	call layout_clear_attributes, and also delegate calls to dependent
	cell layouts.  (#154191, Martyn Russell)

2004-10-01  Matthias Clasen  <mclasen@redhat.com>

	* modules/input/iminuktitut.c: Fix the spelling of Inuktitut
	in several places.  (#154176, John Austin)

2004-09-30  Paolo Borelli  <pborelli@katamail.com>

	* tests/testellipsize.c: exit on close.

2004-09-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmain.c: Make --g-fatal-warnings a G_OPTION_ARG_NONE,
	since it doesn't take an argument.

2004-09-29  Christopher Blizzard  <blizzard@redhat.com>

	* gtk/gtkmenutoolbutton.h: Remove trailing semicolon on
	G_END_DECLS

2004-09-29  Paolo Borelli  <pborelli@katamail.com>

	* tests/testtoolbar.c: add a GtkMenuToolButton.

2004-09-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconview.c (gtk_icon_view_move_cursor_left_right) 
	(gtk_icon_view_move_cursor_start_end) 
	(gtk_icon_view_move_cursor_page_up_down) 
	(gtk_icon_view_move_cursor_up_down): Handle an empty icon
	view gracefully.  (#152486)

	Allow keynav to selectable labels (#138085, David Hawthorne):
	
	* gtk/gtkdialog.c (gtk_dialog_map): Skip selectable labels when
	looking for the initial focus widget.

	* gtk/gtklabel.c (gtk_label_focus): Remove to put selectable labels 
	in the regular focus chain again.

2004-09-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellrendererpixbuf.c (gtk_cell_renderer_pixbuf_render): Don't
	reuse insensitive pixbufs across multiple rows.  (#153984, Milosz
	Derezynski)

	* gtk/gtkmain.c (gtk_parse_args): Use gtk_get_option_group() 
	to obtain an option group with correctly set pre- and post-